# oldest-supported-numpy

./: MANIFEST.in  README.rst  setup.cfg  setup.py
.github/workflows/: main.yml  release.yml
tests/: conftest.py  requirements.txt  test_dependencies.py  test_installation.py
