[metadata]
name = oldest-supported-numpy
description = Meta-package that provides the oldest NumPy that supports a given Python version and platform. If wheels for the platform became available on PyPI only for a more recent NumPy version, then that NumPy version is specified.
long_description = file: README.rst
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD
url = https://github.com/scipy/oldest-supported-numpy
version = 0.15

# The Numpy pinnings below have been adapted from those in the
# SciPy package, which is released under a 3-clause BSD license:
# https://github.com/scipy/scipy/blob/master/LICENSE.txt

# Important: please don't update `python_requires` or remove specs for Python
#            versions that are no longer supported. This may break installing
#            older versions of packages that depend on this meta-package!
[options]
python_requires = >=3.5
install_requires =
    # NOTE: Any platform-related assumptions made here are encoded in the
    #       tests for this package.

    # AIX requires fixes contained in numpy 1.16
    numpy==1.16.0; python_version=='3.5' and platform_system=='AIX'
    numpy==1.16.0; python_version=='3.6' and platform_system=='AIX'
    numpy==1.16.0; python_version=='3.7' and platform_system=='AIX'

    # numpy 1.19 was the first minor release to provide aarch64 wheels, but
    # wheels require fixes contained in numpy 1.19.2 (For Python 3.5: support
    # was dropped in 1.19 so numpy 1.18.5 can be built from source instead).
    numpy==1.18.5; python_version=='3.5' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'
    numpy==1.19.2; python_version=='3.6' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'
    numpy==1.19.2; python_version=='3.7' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'
    numpy==1.19.2; python_version=='3.8' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'

    # arm64 on Darwin supports Python 3.8 and above requires numpy>=1.21.0
    # (first version with universal2 wheels available)
    numpy==1.21.0; python_version=='3.8' and platform_machine=='arm64' and platform_system=='Darwin'
    numpy==1.21.0; python_version=='3.9' and platform_machine=='arm64' and platform_system=='Darwin'

    # Python 3.8 on s390x requires at least 1.17.5, see gh-29
    numpy==1.17.5; python_version=='3.8' and platform_machine=='s390x' and platform_python_implementation != 'PyPy'

    # default numpy requirements
    numpy==1.13.3; python_version=='3.5' and platform_machine!='aarch64' and platform_system!='AIX'
    numpy==1.13.3; python_version=='3.6' and platform_machine!='aarch64' and platform_system!='AIX' and platform_python_implementation != 'PyPy'
    numpy==1.14.5; python_version=='3.7' and platform_machine!='aarch64' and platform_system!='AIX' and platform_python_implementation != 'PyPy'
    numpy==1.17.3; python_version=='3.8' and (platform_machine!='arm64' or platform_system!='Darwin') and platform_machine!='aarch64' and platform_machine!='s390x' and platform_python_implementation != 'PyPy'
    numpy==1.19.3; python_version=='3.9' and (platform_machine!='arm64' or platform_system!='Darwin') and platform_python_implementation != 'PyPy'
    # Note that 1.21.3 was the first version with a complete set of 3.10 wheels,
    # however macOS was broken and it's safe to build against 1.21.4 on all platforms (see gh-28)
    numpy==1.21.4; python_version=='3.10' and platform_python_implementation != 'PyPy'

    numpy==1.19.0; python_version=='3.6' and platform_python_implementation=='PyPy'
    numpy==1.20.0; python_version=='3.7' and platform_python_implementation=='PyPy'

    # For Python versions which aren't yet officially supported,
    # we specify an unpinned Numpy which allows source distributions
    # to be used and allows wheels to be used as soon as they
    # become available.
    numpy; python_version>='3.11'
    numpy; python_version>='3.8' and platform_python_implementation=='PyPy'
