[metadata]
name = oldest-supported-numpy
description = Meta-package that provides the oldest NumPy that supports a given Python version and platform. If wheels for the platform became available on PyPI only for a more recent NumPy version, then that NumPy version is specified.
long_description = file: README.rst
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD
url = https://github.com/scipy/oldest-supported-numpy
version = 2023.08.03

# The Numpy pinnings below have been adapted from those in the
# SciPy package, which is released under a 3-clause BSD license:
# https://github.com/scipy/scipy/blob/master/LICENSE.txt

[options]
python_requires = >=3.7
install_requires =
    # NOTE: Any platform-related assumptions made here are encoded in the
    #       tests for this package.

    # AIX requires fixes contained in numpy 1.16
    numpy==1.16.0; python_version=='3.7' and platform_system=='AIX' and platform_machine!='loongarch64' and platform_python_implementation != 'PyPy'

    # IBM i requires fixes contained in numpy 1.23.3. Only Python 3.6 and 3.9
    # are supported on IBM i system, so we're ignoring other Python versions here
    # for simplicity (see gh-66).
    numpy==1.23.3; python_version=='3.9' and platform_system=='OS400' and platform_machine!='loongarch64' and platform_python_implementation!='PyPy'

    # numpy 1.19 was the first minor release to provide aarch64 wheels, but
    # wheels require fixes contained in numpy 1.19.2
    numpy==1.19.2; python_version=='3.7' and platform_machine=='aarch64' and platform_system!='AIX' and platform_python_implementation != 'PyPy'
    numpy==1.19.2; python_version=='3.8' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'

    # arm64 on Darwin supports Python 3.8 and above requires numpy>=1.21.0
    # (first version with arm64 wheels available)
    numpy==1.21.0; python_version=='3.7' and platform_machine=='arm64' and platform_system=='Darwin' and platform_python_implementation!='PyPy'
    numpy==1.21.0; python_version=='3.8' and platform_machine=='arm64' and platform_system=='Darwin' and platform_python_implementation!='PyPy'
    numpy==1.21.0; python_version=='3.9' and platform_machine=='arm64' and platform_system=='Darwin' and platform_python_implementation!='PyPy'

    # Python 3.8 on s390x requires at least 1.17.5, see gh-29
    numpy==1.17.5; python_version=='3.8' and platform_machine=='s390x' and platform_python_implementation != 'PyPy'

    # loongarch64 requires numpy>=1.22.0
    # Note that 1.22.0 broke support for using the Python limited C API
    # (https://github.com/numpy/numpy/pull/20818), so we use 1.22.2 instead
    numpy==1.22.2; platform_machine=='loongarch64' and python_version>='3.8' and python_version<'3.11' and platform_python_implementation!='PyPy'

    # win-arm64; in the absence of information to the contrary, we want to use the default pins below;
    # however, these are excluded due to `platform_machine not in 'arm64|...'`, so it's easier to
    # formulate a separate requirement just for win-arm64
    numpy==1.14.5; python_version=='3.7' and platform_machine=='arm64' and platform_system=='Windows' and platform_python_implementation != 'PyPy'
    numpy==1.17.3; python_version=='3.8' and platform_machine=='arm64' and platform_system=='Windows' and platform_python_implementation != 'PyPy'
    numpy==1.19.3; python_version=='3.9' and platform_machine=='arm64' and platform_system=='Windows' and platform_python_implementation != 'PyPy'

    # default numpy requirements
    numpy==1.14.5; python_version=='3.7' and platform_machine not in 'arm64|aarch64|loongarch64' and platform_system!='AIX' and platform_python_implementation != 'PyPy'
    numpy==1.17.3; python_version=='3.8' and platform_machine not in 'arm64|aarch64|s390x|loongarch64' and platform_python_implementation != 'PyPy'
    numpy==1.19.3; python_version=='3.9' and platform_system not in 'OS400' and platform_machine not in 'arm64|loongarch64' and platform_python_implementation != 'PyPy'
    # Note that 1.21.3 was the first version with a complete set of 3.10 wheels,
    # however macOS was broken and it's safe to build against 1.21.6 on all platforms (see gh-28 and gh-45)
    numpy==1.21.6; python_version=='3.10' and platform_machine!='loongarch64'
    numpy==1.23.2; python_version=='3.11'

    # PyPy requirements
    numpy==1.19.0; python_version=='3.6' and platform_machine!='loongarch64' and platform_python_implementation=='PyPy'
    numpy==1.20.0; python_version=='3.7' and platform_machine!='loongarch64' and platform_python_implementation=='PyPy'
    numpy==1.22.2; python_version=='3.8' and platform_machine!='loongarch64' and platform_python_implementation=='PyPy'
    numpy==1.25.0; python_version=='3.9' and platform_python_implementation=='PyPy'

    # For Python versions which aren't yet officially supported,
    # we specify an unpinned Numpy which allows source distributions
    # to be used and allows wheels to be used as soon as they
    # become available.
    numpy; python_version>='3.12'
